Start getting a list players feature up and failing

--- a/TODO
+++ b/TODO
@@ -1,4 +1,8 @@
+* List players
+  * Showing whether they're or not?
+* Refactor sinatra code to absorb more functionality
 * Make the actual tournament engine, because that's fucking core
 * Make a manual upload button
 * Make some example robots in different languages
 * think about how to tweak the rules
+* Make tests create their own (temp) players folder and clean it up after each test
