--- a/TODO
+++ b/TODO
@@ -1,8 +1,8 @@
-* show round that your player has been entered into?
+* test with 10 rounds. looked weird.
+* slides for intro
+* automatically roll over players into next round
+* Show something else when tournament is running
+* auto-refresh homepage
+* bin to manually trigger next round now!
 
 * Easier way for windows users to upload
-* Show something else when tournament is running
-* slides for intro
-* bin to manually trigger next round now!
-* test with 10 rounds. looked weird.
-* show rounds upside down
